[package]
name = "egyptian"
version = "0.1.0"
authors = ["Cole Phares <cophares@pdx.edu>"]

[[bin]]
name = "server"
path = "src/bin/server/server.rs"
test = true
doc = true

[[bin]]
name = "client"
path = "src/bin/client/client.rs"
test = true
doc = true

[lib]
name = "card"
path = "src/bin/card.rs"

[dependencies]
rand = ">= 0.4.2"
rustfmt = ">= 0.10.0"
serde = "1.0.63"
